API_Reference/pymilvus/v2.2.x/Schema/CollectionSchema().md
# CollectionSchema()

This is the constructor method to create a CollectionSchema.

## Invocation

```python
CollectionSchema(fields, description='', **kwargs)
```

## Return

A CollectionSchema object.

### Properties

| Property               | Description                                                                  |
|------------------------|------------------------------------------------------------------------------|
| `fields`               | List of FieldSchema                                                          |
| `description`          | Description of the CollectionSchema                                          |
| `auto_id`              | Boolean value that indicates if the primary keys are automatically generated |
| `enable_dynamic_field` | Boolean value that indicates whether to use dynamic fields in the collection |

## Example

```python
from pymilvus import CollectionSchema, FieldSchema, DataType

book_id = FieldSchema(
  name="book_id", 
  dtype=DataType.INT64, 
  is_primary=True, 
)

word_count = FieldSchema(
  name="word_count", 
  dtype=DataType.INT64,  
)

book_intro = FieldSchema(
  name="book_intro", 
  dtype=DataType.FLOAT_VECTOR, 
  dim=2
)

book_meta = FieldSchema(
  name="book_meta",
  is_dynamic=True
)

schema = CollectionSchema(
  fields=[book_id, word_count, book_intro, book_meta], 
  description="Test book search",
  enable_dynamic_field=True
)
```